Bug 254240 - Dolphin crashes when entering direcory with Icons View mode
Summary: Dolphin crashes when entering direcory with Icons View mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 254649 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-15 11:22 UTC by Eugene Shalygin
Modified: 2010-11-15 18:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2010-10-15 11:22:35 UTC
Application: dolphin (1.5.9)
KDE Platform Version: 4.5.72 (4.6 >= 20101012) (Compiled from sources)
Qt Version: 4.7.0
Operating System: Linux 2.6.35-gentoo-r9 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
The following sequence leads to crash:

0. Configure Dolphin to use per-directory view settings (in particular Items/Details view mode)

1. Open some directory with list view mode
2. Go to subdirectory with Icons view mode from the list of directory contents

If one go to the same directory via "Places" link, there is no crash

The crash can be reproduced every time.

-- Backtrace:
Application: Dolphin (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fa6cfee2760 (LWP 4357))]

Thread 2 (Thread 0x7fa6ba716710 (LWP 4366)):
#0  0x00007fa6cd5ddd53 in select () from /lib/libc.so.6
#1  0x00007fa6ceb9e4f1 in qt_safe_select(int, fd_set*, fd_set*, fd_set*, timeval const*) () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fa6ceba32ac in QEventDispatcherUNIXPrivate::doSelect(QFlags<QEventLoop::ProcessEventsFlag>, timeval*) () from /usr/lib64/qt4/libQtCore.so.4
#3  0x00007fa6ceba3e6f in QEventDispatcherUNIX::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fa6ceb759a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fa6ceb75be4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fa6cea8bef4 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fa6ceb57358 in QInotifyFileSystemWatcherEngine::run() () from /usr/lib64/qt4/libQtCore.so.4
#8  0x00007fa6cea8e6be in QThreadPrivate::start(void*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007fa6ce7ffd5c in start_thread () from /lib/libpthread.so.0
#10 0x00007fa6cd5e45ed in clone () from /lib/libc.so.6

Thread 1 (Thread 0x7fa6cfee2760 (LWP 4357)):
[KCrash Handler]
#6  0x00007fa6ce22e33e in QAbstractItemView::model() const () from /usr/lib64/qt4/libQtGui.so.4
#7  0x00007fa6c0e5a4bc in DolphinViewController::itemForIndex(QModelIndex const&) const () from /usr/lib/libdolphinprivate.so.4
#8  0x00007fa6c0e45da4 in DolphinDetailsView::visualRect(QModelIndex const&) const () from /usr/lib/libdolphinprivate.so.4
#9  0x00007fa6ce22f69e in QAbstractItemView::update(QModelIndex const&) () from /usr/lib64/qt4/libQtGui.so.4
#10 0x00007fa6ce22f77e in QAbstractItemViewPrivate::setHoverIndex(QPersistentModelIndex const&) () from /usr/lib64/qt4/libQtGui.so.4
#11 0x00007fa6ce2314c9 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#12 0x00007fa6ce275ef5 in QTreeView::viewportEvent(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#13 0x00007fa6ceb76776 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#14 0x00007fa6cdd4caa1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#15 0x00007fa6cdd4d19f in QApplicationPrivate::dispatchEnterLeave(QWidget*, QWidget*) () from /usr/lib64/qt4/libQtGui.so.4
#16 0x00007fa6cdd4dd40 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#17 0x00007fa6cdd4e032 in QApplicationPrivate::sendSyntheticEnterLeave(QWidget*) () from /usr/lib64/qt4/libQtGui.so.4
#18 0x00007fa6cdd995a2 in QWidgetPrivate::hideChildren(bool) () from /usr/lib64/qt4/libQtGui.so.4
#19 0x00007fa6cdd9972e in QWidgetPrivate::hide_helper() () from /usr/lib64/qt4/libQtGui.so.4
#20 0x00007fa6cdda1da8 in QWidget::setVisible(bool) () from /usr/lib64/qt4/libQtGui.so.4
#21 0x00007fa6cdd98c5c in QWidgetPrivate::close_helper(QWidgetPrivate::CloseMode) () from /usr/lib64/qt4/libQtGui.so.4
#22 0x00007fa6c0e3fdc8 in DolphinView::ViewAccessor::deleteView() () from /usr/lib/libdolphinprivate.so.4
#23 0x00007fa6c0e40084 in DolphinView::createView() () from /usr/lib/libdolphinprivate.so.4
#24 0x00007fa6c0e41dec in DolphinView::applyViewProperties() () from /usr/lib/libdolphinprivate.so.4
#25 0x00007fa6c0e44901 in DolphinView::setUrl(KUrl const&) () from /usr/lib/libdolphinprivate.so.4
#26 0x00007fa6c17ede8c in DolphinViewContainer::slotItemTriggered(KFileItem const&) () from /usr/lib64/libkdeinit4_dolphin.so
#27 0x00007fa6c17ee7a7 in DolphinViewContainer::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib64/libkdeinit4_dolphin.so
#28 0x00007fa6ceb8ac57 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#29 0x00007fa6c0e406d5 in DolphinView::itemTriggered(KFileItem const&) () from /usr/lib/libdolphinprivate.so.4
#30 0x00007fa6c0e40722 in DolphinView::triggerItem(KFileItem const&) () from /usr/lib/libdolphinprivate.so.4
#31 0x00007fa6c0e44caa in DolphinView::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libdolphinprivate.so.4
#32 0x00007fa6ceb8ac57 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#33 0x00007fa6c0e5a7a5 in DolphinViewController::itemTriggered(KFileItem const&) () from /usr/lib/libdolphinprivate.so.4
#34 0x00007fa6c0e5a8b6 in DolphinViewController::triggerItem(QModelIndex const&) () from /usr/lib/libdolphinprivate.so.4
#35 0x00007fa6c0e5ad89 in DolphinViewController::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libdolphinprivate.so.4
#36 0x00007fa6ceb8ac57 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#37 0x00007fa6ce234155 in QAbstractItemView::clicked(QModelIndex const&) () from /usr/lib64/qt4/libQtGui.so.4
#38 0x00007fa6ce23451c in QAbstractItemView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#39 0x00007fa6c0e54cc4 in DolphinTreeView::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libdolphinprivate.so.4
#40 0x00007fa6cdd9df6f in QWidget::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#41 0x00007fa6ce1213a6 in QFrame::event(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#42 0x00007fa6ce231443 in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#43 0x00007fa6ce275ef5 in QTreeView::viewportEvent(QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#44 0x00007fa6ceb76776 in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#45 0x00007fa6cdd4caa1 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#46 0x00007fa6cdd51f30 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#47 0x00007fa6cf8f9536 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#48 0x00007fa6ceb765fb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#49 0x00007fa6cdd4dad5 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/qt4/libQtGui.so.4
#50 0x00007fa6cddcaee8 in QETWidget::translateMouseEvent(_XEvent const*) () from /usr/lib64/qt4/libQtGui.so.4
#51 0x00007fa6cddc9629 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#52 0x00007fa6cddf1041 in QEventDispatcherX11::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#53 0x00007fa6ceb759a2 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#54 0x00007fa6ceb75be4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#55 0x00007fa6ceb7a02b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#56 0x00007fa6c17f2b65 in kdemain () from /usr/lib64/libkdeinit4_dolphin.so
#57 0x0000000000407563 in launch(int, char const*, char const*, char const*, int, char const*, bool, char const*, bool, char const*) ()
#58 0x00000000004080df in handle_launcher_request ()
#59 0x00000000004087c5 in handle_requests(int) ()
#60 0x00000000004093d7 in main ()

Reported using DrKonqi
Comment 1 Eugene Shalygin 2010-10-15 11:25:42 UTC
"If one go to the same directory via "Places" link, there is no crash" - even if one clicks the link when Dolphin is in directory from item #1
Comment 2 Peter Penz 2010-10-15 13:43:25 UTC
SVN commit 1186206 by ppenz:

It is a valid use-case that m_itemView is 0.

BUG: 254240


 M  +6 -4      dolphinviewcontroller.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1186206
Comment 3 Dario Andres 2010-11-15 18:01:08 UTC
*** Bug 254649 has been marked as a duplicate of this bug. ***