It is a valid use-case that m_itemView is 0.

BUG: 254240

svn path=/trunk/KDE/kdebase/apps/; revision=1186206